objects/ssot__WarrantyTerm__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDateSource__c</fullName>
        <label>Effective Start Date Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExchangeType__c</fullName>
        <label>Exchange Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExclusionsTermText__c</fullName>
        <label>Exclusion Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpensesCoveredDurationNumber__c</fullName>
        <label>Expenses Covered Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExpensesCoveredDurationTimeUOM__c</fullName>
        <label>Expenses Covered DurationTime UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpensesCoveredPercent__c</fullName>
        <label>Expenses Covered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Warranty Term Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTransferrable__c</fullName>
        <label>Is Transferrable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LaborCoveredDurationNumber__c</fullName>
        <label>Labor Covered Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LaborCoveredDurationTimeUOM__c</fullName>
        <label>Labor Covered Duration Time UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LaborCoveredPercent__c</fullName>
        <label>Labor Covered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartsCoveredDurationNumber__c</fullName>
        <label>Parts Covered Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PartsCoveredDurationTimeUOM__c</fullName>
        <label>Parts Covered Duration Time UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartsCoveredPercent__c</fullName>
        <label>Parts Covered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriceBookId__c</fullName>
        <label>Price Book</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UsageCoveredPercent__c</fullName>
        <label>Usage Covered Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UsageCoveredUOM__c</fullName>
        <label>Usage Covered UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyDurationTermNumber__c</fullName>
        <label>Warranty Duration Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyDurationTimeUOM__c</fullName>
        <label>Warranty Duration Time UOM</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyTermCode__c</fullName>
        <label>Warranty Term Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyTerm_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WarrantyTerm_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WarrantyTerm_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>WarrantyTerm_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyTerm_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WarrantyTerm_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WarrantyTerm_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>WarrantyTerm_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__WarrantyType__c</fullName>
        <label>Warranty Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009451809_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WarrantyTerm_PriceBookId_map_PriceBo_rel</label>
        <referenceTo>ssot__PriceBook__dlm</referenceTo>
        <relationshipLabel>WarrantyTerm_PriceBookId_map_PriceBo_rel</relationshipLabel>
        <relationshipName>rel_1702009451809_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009452085_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WarrantyTerm_LastModifiedById_map_Us_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>WarrantyTerm_LastModifiedById_map_Us_rel</relationshipLabel>
        <relationshipName>rel_1702009452085_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009475065_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WarrantyTerm_OwnerId_map_UserGroup_I_rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>WarrantyTerm_OwnerId_map_UserGroup_I_rel</relationshipLabel>
        <relationshipName>rel_1702009475065_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>